# Dither

./: .gitignore  CMakeLists.txt  dither  test.ba
src/: ColorPalette.cpp  ColorPalette.h  PNG_Data_Array.h  PNG_Grey.cpp  PNG_Grey.h  PNG_Loader.cpp  PNG_Loader.h  PNG_RGB.cpp  PNG_RGB.h  PNG_RGBA.cpp  PNG_RGBA.h  PNG_RGBA_Array.cpp  PNG_RGBA_Array.h  PNG_RGB_Array.cpp  PNG_RGB_Array.h  PNG_structs.h  main.cpp
